@@ -81,7 +81,12 @@ class Groups_Admin_User_Profile {
 				 *
 				 * @return array
 				 */
-				$groups = apply_filters( 'groups_admin_user_profile_user_new_form_groups', $wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ), $type );
+				$groups = apply_filters(
+					'groups_admin_user_profile_user_new_form_groups',
+					// phpcs:ignore WordPress.DB.PreparedSQL.InterpolatedNotPrepared
+					$wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ),
+					$type
+				);
 				if ( $groups ) {
 					$output .= '<style type="text/css">';
 					$output .= '.groups .selectize-input { font-size: inherit; }';
@@ -133,7 +138,12 @@ class Groups_Admin_User_Profile {
 						 *
 						 * @return array
 						 */
-						$groups = apply_filters( 'groups_admin_user_profile_user_register_groups', $wpdb->get_results( "SELECT * FROM $groups_table" ), $user_id );
+						$groups = apply_filters(
+							'groups_admin_user_profile_user_register_groups',
+							// phpcs:ignore WordPress.DB.PreparedSQL.InterpolatedNotPrepared
+							$wpdb->get_results( "SELECT * FROM $groups_table" ),
+							$user_id
+						);
 						if ( $groups ) {
 							$user_group_ids = isset( $_POST['group_ids'] ) && is_array( $_POST['group_ids'] ) ? $_POST['group_ids'] : array();
 							foreach( $groups as $group ) {
@@ -200,7 +210,12 @@ class Groups_Admin_User_Profile {
 			 *
 			 * @return array
 			 */
-			$groups = apply_filters( 'groups_admin_user_profile_edit_user_profile_groups', $wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ), $user->get_user()->ID );
+			$groups = apply_filters(
+				'groups_admin_user_profile_edit_user_profile_groups',
+				// phpcs:ignore WordPress.DB.PreparedSQL.InterpolatedNotPrepared
+				$wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ),
+				$user->get_user()->ID
+			);
 			if ( $groups ) {
 				$output .= '<style type="text/css">';
 				$output .= '.groups .selectize-input { font-size: inherit; }';
@@ -253,7 +268,12 @@ class Groups_Admin_User_Profile {
 		global $wpdb;
 		if ( Groups_User::current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
 			$groups_table = _groups_get_tablename( 'group' );
-			$groups = apply_filters( 'groups_admin_user_profile_edit_user_profile_update_groups', $wpdb->get_results( "SELECT * FROM $groups_table" ), $user_id );
+			$groups = apply_filters(
+				'groups_admin_user_profile_edit_user_profile_update_groups',
+				// phpcs:ignore WordPress.DB.PreparedSQL.InterpolatedNotPrepared
+				$wpdb->get_results( "SELECT * FROM $groups_table" ),
+				$user_id
+			);
 			if ( $groups ) {
 				$user_group_ids = isset( $_POST['group_ids'] ) && is_array( $_POST['group_ids'] ) ? $_POST['group_ids'] : array();
 				foreach( $groups as $group ) {
