@@ -103,6 +103,7 @@ function groups_admin_groups_edit( $group_id ) {
 
 	$capability_table       = _groups_get_tablename( 'capability' );
 	$group_capability_table = _groups_get_tablename( 'group_capability' );
+	// phpcs:ignore WordPress.DB.PreparedSQL.InterpolatedNotPrepared
 	$group_capabilities     = $wpdb->get_results( $wpdb->prepare(
 		"SELECT * FROM $capability_table WHERE capability_id IN ( SELECT capability_id FROM $group_capability_table WHERE group_id = %d )",
 		Groups_Utility::id( $group_id )
@@ -113,6 +114,7 @@ function groups_admin_groups_edit( $group_id ) {
 			$group_capabilities_array[] = $group_capability->capability_id;
 		}
 	}
+	// phpcs:ignore WordPress.DB.PreparedSQL.InterpolatedNotPrepared
 	$capabilities = $wpdb->get_results( "SELECT * FROM $capability_table ORDER BY capability" );
 
 	$output .= '<div class="field">';
@@ -224,6 +226,7 @@ function groups_admin_groups_edit_submit() {
 		if ( $group_id ) {
 			$capability_table       = _groups_get_tablename( "capability" );
 			$group_capability_table = _groups_get_tablename( "group_capability" );
+			// phpcs:ignore WordPress.DB.PreparedSQL.InterpolatedNotPrepared
 			$group_capabilities = $wpdb->get_results( $wpdb->prepare(
 				"SELECT * FROM $capability_table WHERE capability_id IN ( SELECT capability_id FROM $group_capability_table WHERE group_id = %d )",
 				Groups_Utility::id( $group_id )
