@@ -2,6 +2,7 @@
 
 2024-12-25 - version 3.4.0
 * Update - WordPress 6.7 compatible.
+* Dev - Security validation WordPress.DB.PreparedSQL.InterpolatedNotPrepared
 
 = 3.3.1 =
 * WordPress 6.7 compatible.
